--- a/src/components/faq/faq-section/faq-section.component.css
+++ b/src/components/faq/faq-section/faq-section.component.css
@@ -7,12 +7,15 @@
 }
 
 p {
-    height: 0;
+    max-height: 0;
     overflow-y: hidden;
+    border-left: 3px solid var(--primary-accent);
+    border-right: 3px solid var(--primary-accent);
+    transition: all 300ms linear;
 }
 
 p.expanded {
-    height: unset;
+    max-height: 20rem;
 }
 
 .prefix {
