Add some randomized timeline item colors

--- a/src/components/timeline/timeline-item/timeline-item.component.css
+++ b/src/components/timeline/timeline-item/timeline-item.component.css
@@ -2,10 +2,18 @@
     box-shadow: 5px 5px 10px 1px var(--shadow);
 }
 
+.timeline-btn:hover {
+    color: var(--item-color);
+}
+
 .timeline-btn:active {
     box-shadow: inset 5px 5px 10px 1px var(--shadow);
 }
 
 .round-hack {
     transform: translateY(101%);
+}
+
+.item-bg {
+    background-color: var(--item-color);
 }
