--- a/src/components/timeline/timeline-item/timeline-item.component.html
+++ b/src/components/timeline/timeline-item/timeline-item.component.html
@@ -1,28 +1,28 @@
 <div class="relative text-primary">
-    <div class="rounded-full relative item-bg">
+    <div class="rounded-lg md:rounded-full relative item-bg">
         <div class="w-full flex items-center justify-between p-6 relative z-10">
             <ng-container *ngIf="reverse">
                 <ng-container *ngTemplateOutlet="btn"></ng-container>
             </ng-container>
-            <div [ngClass]="{'pl-4': reverse, 'pr-4' : !reverse}">
-                <h1 class="uppercase text-lg">{{itemTitle}}</h1>
+            <div class="px-4">
+                <h1 class="uppercase text-base lg:text-lg">{{itemTitle}}</h1>
                 <ng-content select="[prompt]"></ng-content>
             </div>
             <ng-container *ngIf="!reverse">
                 <ng-container *ngTemplateOutlet="btn"></ng-container>
             </ng-container>
         </div>
-        <div class="absolute round-hack h-1/2 w-full item-bg top-0 z-0" [ngClass]="{'hidden': !extended}"></div>
+        <div class="opacity-delay absolute round-hack h-1/2 w-full item-bg top-0 z-0" [ngClass]="{'opacity-0': !extended}"></div>
     </div>
 
-    <div class="overflow-hidden w-full item-bg px-6" [ngClass]="{'max-h-0': !extended}">
+    <div class="timeline-item-text overflow-hidden w-full item-bg px-6" [ngClass]="{'max-h-0': !extended, 'max-h-custom': extended}">
         <ng-content select="[text]"></ng-content>
     </div>
 </div>
 
 <ng-template #btn>
-    <div class="bg-primary w-36 h-36 rounded-full flex items-center justify-center flex-shrink-0">
-        <div class="timeline-btn text-primary-accent w-24 h-24 rounded-full flex items-center justify-center"
+    <div class="bg-primary w-24 lg:w-36 h-24 lg:h-36 rounded-full flex items-center justify-center flex-shrink-0">
+        <div class="timeline-btn text-primary-accent w-16 lg:w-24 h-16 lg:h-24 rounded-full flex items-center justify-center"
             (click)="toggle()">
             <fa-icon [icon]="icon" size="2xl"></fa-icon>
         </div>
