--- a/src/components/navigation/navbar/navbar.component.html
+++ b/src/components/navigation/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="h-16 md:h-full flex items-center relative xl:text-lg">
-    <a href="/" class="h-full">
+    <a href="/" class="h-full" aria-label="Back to home">
         <!-- Include raw SVG to easily change its color -->
-        <svg class="h-full px-3 py-2 w-20 cursor-pointer">
+        <svg class="h-full px-3 py-2 w-20 cursor-pointer" aria-hidden="true">
             <use href="assets/icon-raw.svg#logo"></use>
         </svg>
     </a>
