--- a/src/components/timeline/timeline/timeline.component.html
+++ b/src/components/timeline/timeline/timeline.component.html
@@ -1,4 +1,4 @@
-<div class="grid gap-y-12 relative z-10">
+<div class="grid gap-y-12 relative z-10" aria-label="Timeline">
     <ng-content></ng-content>
 </div>
 <div class="absolute w-1/2 h-full top-0 left-0 time-line z-0"></div>
