--- a/src/components/jigsaw-puzzle/jigsaw-puzzle.component.html
+++ b/src/components/jigsaw-puzzle/jigsaw-puzzle.component.html
@@ -1,5 +1,6 @@
-<svg #svg class="w-full h-full" [attr.viewBox]="'0 0 ' + width * 1.3 + ' ' + height * 1.3" (mouseup)="onDragEnd()" (mouseleave)="onDragEnd()"
-    (touchend)="onDragEnd()" (touchleave)="onDragEnd()" (touchcancel)="onDragEnd()" stroke="#000000" stroke-opacity="0.1">
+<svg #svg class="w-full h-full" [attr.viewBox]="'0 0 ' + width * 1.3 + ' ' + height * 1.3" (mouseup)="onDragEnd()"
+    (mouseleave)="onDragEnd()" [ariaHidden]="true" (touchend)="onDragEnd()" (touchleave)="onDragEnd()"
+    (touchcancel)="onDragEnd()" stroke="#000000" stroke-opacity="0.1" focusable="false">
     <defs>
         <pattern id="bg" patternUnits="userSpaceOnUse" [attr.width]="width" [attr.height]="height">
             <image [attr.href]="image" [attr.width]="width" [attr.height]="height"></image>
