--- a/src/components/jigsaw-puzzle/jigsaw-puzzle.component.html
+++ b/src/components/jigsaw-puzzle/jigsaw-puzzle.component.html
@@ -5,12 +5,16 @@
         <pattern id="bg" patternUnits="userSpaceOnUse" [attr.width]="width" [attr.height]="height">
             <image [attr.href]="image" [attr.width]="width" [attr.height]="height"></image>
         </pattern>
-        <pattern *ngFor="let piece of puzzlePieces" [id]="'bg-' + piece.row + '-' + piece.column" href="#bg"
+        @for(piece of puzzlePieces; track piece) {
+        <pattern [id]="'bg-' + piece.row + '-' + piece.column" href="#bg"
             [attr.patternTransform]="'translate(' + piece.column * puzzleWidth * -1 + ' ' + piece.row * puzzleHeight * -1 + ')'">
         </pattern>
+        }
+
     </defs>
-    <path *ngFor="let piece of puzzlePieces" transform-origin="center center"
-        [ngClass]="{'cursor-move z-10': !piece.locked}" (mousedown)="onDragStart($event)"
-        (touchstart)="onDragStart($event)" (mousemove)="onDragMove($event)" (touchmove)="onDragMove($event)"
-        [attr.fill]="'url(#bg-' + piece.row + '-' + piece.column + ')'"></path>
+    @for(piece of puzzlePieces; track piece) {
+    <path transform-origin="center center" [ngClass]="{'cursor-move z-10': !piece.locked}"
+        (mousedown)="onDragStart($event)" (touchstart)="onDragStart($event)" (mousemove)="onDragMove($event)"
+        (touchmove)="onDragMove($event)" [attr.fill]="'url(#bg-' + piece.row + '-' + piece.column + ')'"></path>
+    }
 </svg>
