Add simple analytics integration

--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -11,7 +11,8 @@
             <span class="email justify-self-start cursor-pointer"
                 title="Click to copy to clipboard, double click to write an email" (click)="copyToClipboard()"
                 (dblclick)="openEmail()">&#64;</span>
-            <span class="lg:hidden col-span-2 px-2 text-center">(Click to copy to clipboard, double click to write an email)</span>
+            <span class="lg:hidden col-span-2 px-2 text-center">(Click to copy to clipboard, double click to write an
+                email)</span>
         </div>
 
     </div>
@@ -21,4 +22,13 @@
         }
     </div>
 </div>
-<p class="text-primary text-sm pt-2 text-center px-2">Copyright © 2024 Gábor Farkas | Hosted by GitHub Pages</p>
+<p class="text-primary text-sm py-2 text-center px-2">Copyright © 2024 Gábor Farkas | Hosted by GitHub Pages</p>
+<a href="https://dashboard.simpleanalytics.com/farkasgaborev.eu?utm_source=farkasgaborev.eu&utm_content=badge"
+    referrerpolicy="origin" target="_blank" class="flex justify-center">
+    <picture>
+        <source srcset="https://simpleanalyticsbadges.com/farkasgaborev.eu?mode=light"
+            media="(prefers-color-scheme: light)" />
+        <img class="h-8" src="https://simpleanalyticsbadges.com/farkasgaborev.eu?mode=light" loading="lazy"
+            referrerpolicy="no-referrer" crossorigin="anonymous" />
+    </picture>
+</a>
