--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ body {
     font-style: normal;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, th {
     font-family: "Chivo", "Arial", sans-serif;
     font-weight: 600;
 }
