Add leaflet map component

--- a/src/components/modal/modal.component.html
+++ b/src/components/modal/modal.component.html
@@ -5,7 +5,7 @@
             (click)="close()"></fa-icon>
     </div>
 
-    <div class="flex-1 w-fully">
+    <div class="flex-1 w-full">
         <ng-content></ng-content>
     </div>
 </div>
