--- a/src/components/modal/modal.component.html
+++ b/src/components/modal/modal.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div class="flex-1 w-full">
+    <div class="flex-1 min-w-0 min-h-0 w-full">
         <ng-content></ng-content>
     </div>
 </div>
