--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,3 +1,4 @@
+@if (!compact) {
 <div class="flex">
     <div class="w-full w-4/5 sm:w-full lg:w-3/6 text-sm sm:text-lg flex justify-center text-primary">
         <div class="grid grid-rows-3 md:grid-cols-2 gap-2 sm:gap-5 pb-10 pt-14 items-center justify-items-center">
@@ -28,7 +29,8 @@
         }
     </div>
 </div>
-<p class="text-primary text-sm py-2 text-center px-2">Copyright © 2024 Gábor Farkas | Hosted by GitHub Pages</p>
+}
+<p class="text-primary text-sm py-2 text-center px-2" [ngClass]="{'hidden md:block': compact}">Copyright © 2024 Gábor Farkas | Hosted by GitHub Pages</p>
 <a href="https://dashboard.simpleanalytics.com/farkasgaborev.eu?utm_source=farkasgaborev.eu&utm_content=badge"
     referrerpolicy="origin" target="_blank" class="flex justify-center">
     <picture>
@@ -38,3 +40,13 @@
             referrerpolicy="no-referrer" crossorigin="anonymous" />
     </picture>
 </a>
+@if (compact) {
+<div class="hidden md:block text-primary">
+    <fa-icon [icon]="email" size="lg"></fa-icon>
+    <span class="email pl-2 cursor-pointer" [ngClass]="{'copied': singleClick}"
+        title="Click to copy to clipboard, double click to write an email" (click)="copyToClipboard()"
+        (dblclick)="openEmail()">
+        <span>&#64;</span>
+    </span>
+</div>
+}
