--- a/src/layouts/application/application.layout.html
+++ b/src/layouts/application/application.layout.html
@@ -2,3 +2,8 @@
     <router-outlet />
 </div>
 <footer id="footer" [compact]="true" class="bg-primary-accent h-10 flex justify-around items-center"></footer>
+<div class="absolute w-1/2 xl:w-1/3 bottom-4 right-4 flex flex-col-reverse gap-4">
+    @for (notification of notifications; track $index) {
+        <div class="toast min-h-16" [notification]="notification"></div>
+    }
+</div>
