--- a/src/layouts/application/application.layout.html
+++ b/src/layouts/application/application.layout.html
@@ -2,8 +2,8 @@
     <router-outlet />
 </div>
 <footer id="footer" [compact]="true" class="bg-primary-accent h-10 flex justify-around items-center"></footer>
-<div class="absolute w-1/2 xl:w-1/3 bottom-4 right-4 flex flex-col-reverse gap-4">
+<div class="absolute w-1/2 xl:w-1/3 bottom-4 right-4 flex flex-col-reverse gap-4 z-50">
     @for (notification of notifications; track $index) {
-        <div class="toast min-h-16" [notification]="notification"></div>
+        <div class="toast min-h-16 z-50" [notification]="notification"></div>
     }
 </div>
