--- a/src/layouts/application/application.layout.html
+++ b/src/layouts/application/application.layout.html
@@ -1,7 +1,7 @@
-<div class="flex-grow">
+<div class="h-full-10">
     <router-outlet />
 </div>
-<footer id="footer" [compact]="true" class="bg-primary-accent h-10 flex justify-between items-center relative"></footer>
+<footer id="footer" [compact]="true" class="bg-primary-accent h-10 flex justify-between items-center relative z-10"></footer>
 <div class="absolute w-1/2 xl:w-1/3 bottom-4 right-4 flex flex-col-reverse gap-4 z-50">
     @for (notification of notifications; track notification) {
         <div class="toast min-h-16 z-50" [notification]="notification"></div>
